<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingHorizontal="15dp"
    android:paddingVertical="15dp"
    tools:context=".ui.activities.Main.fragments.CardFormFragment">

    <TextView
        android:id="@+id/label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_card_label"
        android:textSize="25sp" />
    <LinearLayout
        android:layout_below="@id/label"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textFieldPan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:startIconDrawable="@drawable/ic_add_card"
            android:hint="@string/prompt_pan">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="20"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textFieldCardHolder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:startIconDrawable="@drawable/ic_person"
            android:hint="@string/prompt_cardholder">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textFieldExpireDate"
                android:layout_width="175dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                app:startIconDrawable="@drawable/ic_baseline_calendar_today_24"
                android:hint="@string/prompt_expdate">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="date" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textFieldCVV"
                android:layout_width="175dp"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                app:startIconDrawable="@drawable/ic_key"
                android:hint="@string/prompt_security_code">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLength="4"
                    android:inputType="number" />
            </com.google.android.material.textfield.TextInputLayout>
        </RelativeLayout>
        <Button
            android:id="@+id/AddCardBtn"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="20dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/prompt_save" />
    </LinearLayout>
</RelativeLayout>